# spectra

./: .gitignore  CMakeLists.txt  README.md  main.cpp  spectra.rc  spectra_cli.cpp  spectra_gpu.cpp  spectra_gui.cpp
pathtracer/: CMakeLists.txt  compiled_scene.cpp  compiled_scene.cuh  host.ixx  integrator.cu  integrator.cuh  pathtracer.cpp  pathtracer.ixx  pathtracer_cli.cpp  pbrt_scene.cpp  pbrt_scene.ixx  pbrt_scene_library.cpp  pbrt_scene_library.ixx  pbrt_scene_panel.cpp  pbrt_scene_panel.ixx  renderer.cpp  renderer.ixx
pathtracer/base/: bssrdf.cuh  bxdf.cuh  camera.cuh  film.cuh  filter.cuh  light.cuh  lightsampler.cuh  material.cuh  medium.cuh  sampler.cuh  shape.cuh  texture.cuh
pathtracer/core/: bsdf.cuh  bssrdf.cu  bssrdf.cuh  bxdfs.cu  bxdfs.cuh  cameras.cu  cameras.cuh  diagnostics.cuh  film.cu  film.cuh  filters.cu  filters.cuh  interaction.cu  interaction.cuh  kernel_config.cu  kernel_config.cuh  lights.cu  lights.cuh  lightsamplers.cu  lightsamplers.cuh  materials.cu  materials.cuh  media.cu  media.cuh  media_host.cu  paramdict.cu  paramdict.cuh  ray.cuh  render_config.cuh  samplers.cu  samplers.cuh  shapes.cu  shapes.cuh  spectra.soa  textures.cu  textures.cuh
pathtracer/gpu/: util.cu  util.cuh
pathtracer/memory/: memory.cu  memory.cuh
pathtracer/optix/: aggregate.cu  aggregate.cuh  optix.cu  optix.cuh
pathtracer/tools/: rgb2spec_opt.cpp
pathtracer/util/: bluenoise.cuh  buffercache.cuh  check.cuh  color.cu  color.cuh  colorspace.cu  colorspace.cuh  containers.cuh  file.cpp  file.h  float.cuh  hash.cuh  image.cpp  image.cuh  loopsubdiv.cu  loopsubdiv.cuh  lowdiscrepancy.cu  lowdiscrepancy.cuh  math.cu  math.cuh  memory.cu  memory.cuh  mesh.cu  mesh.cuh  mipmap.cu  mipmap.cuh  noise.cu  noise.cuh  parallel.cu  parallel.cuh  pmj02tables.cuh  primes.cu  primes.cuh  pstd.cu  pstd.cuh  rng.cuh  sampling.cu  sampling.cuh  scattering.cu  scattering.cuh  (+12 more)
pathtracer/wavefront/: intersect.cuh  workitems.cuh  workqueue.cuh
projects/bouncing_ball/: CMakeLists.txt  bouncing_ball.cpp  bouncing_ball.ixx  main.cpp  plugin.cpp  visualization.ixx
projects/cloth/: CMakeLists.txt  cloth.cpp  cloth.cu  cloth.h  cloth.ixx  main.cpp  plugin.cpp  visualization.ixx
projects/pyro/: CMakeLists.txt  main.cpp  plugin.cpp  pyro.cpp  pyro.cu  pyro.h  pyro.ixx  visualization.ixx
projects/sparkles/: CMakeLists.txt  main.cpp  plugin.cpp  sparkles.cpp  sparkles.ixx  visualization.ixx
rasterizer/: CMakeLists.txt  common.ixx  curves.ixx  debug.ixx  frame.ixx  host.cpp  host.ixx  math.ixx  mesh.ixx  particles.ixx  rasterizer.cpp  rasterizer.ixx  renderer.cpp  renderer.ixx  scene.cpp  scene.ixx  scene_runtime.cpp  scene_runtime.ixx  splats.ixx  ui.ixx  visualization.cpp  visualization.ixx  volume.ixx
rasterizer/shaders/: camera_uniform.slangh  mesh.slang  mesh_pick.slang  mesh_selection_mask.slang  particle.slang  particle_pick.slang  particle_selection_mask.slang  point_cloud.slang  point_cloud_pick.slang  point_cloud_selection_mask.slang  selection_outline.slang  viewport_grid.slang  viewport_image_plane.slang  viewport_segment.slang  viewport_voxel_grid.slang  viewport_voxel_grid_compact.slang  volume.slang  volume_color_upload.slang  volume_pick.slang  volume_selection_mask.slang  volume_upload.slang
scene/: CMakeLists.txt  math.ixx  pbrt.cpp  pbrt.ixx  pbrt_preview.cpp  pbrt_preview.ixx  plugin_abi.ixx  plugin_codec.cpp  plugin_codec.ixx  plugin_host.cpp  plugin_host.ixx  plugin_library.cpp  plugin_library.ixx  preview.cpp  preview.ixx  scene.cpp  scene.ixx  session.cpp  session.ixx  spatial.cpp  spatial.ixx  ui.cpp  ui.ixx
spectra/: CMakeLists.txt  DESIGN.md  pathtracer.cpp  pathtracer.h  pathtracer.ixx  pathtracer_scene.cpp  pathtracer_scene.ixx  rasterizer.cpp  rasterizer.ixx  rasterizer_scene.cpp  rasterizer_scene.ixx  scene.cpp  scene.h  scene.ixx  scene_builtin.cpp  scene_builtin.h  scene_library.cpp  scene_library.ixx  scene_location.h  scene_pbrt.cpp  scene_pbrt.ixx  scene_session.cpp  scene_session.ixx  spectra.cpp  spectra.h  spectra.ixx  spectra_contract.ixx
spectra/pathtracer/: camera_controller.cpp  camera_controller.h  compiled_scene.cpp  compiled_scene.cuh  integrator.cu  integrator.cuh  integrator.h  panels.cpp  pathtracer.cpp  pathtracer.h  render_backend.cpp  render_backend.h  session.cpp  session.h  wavefront.cu  wavefront.h  wavefront_scene.cpp  wavefront_scene.cuh  wavefront_scene.h
spectra/pathtracer/base/: bssrdf.cuh  bssrdf.h  bxdf.cuh  bxdf.h  camera.cuh  camera.h  film.cuh  film.h  filter.cuh  filter.h  light.cuh  light.h  lightsampler.cuh  lightsampler.h  material.cuh  material.h  medium.cuh  medium.h  sampler.cuh  sampler.h  shape.cuh  shape.h  texture.cuh  texture.h
spectra/pathtracer/cmd/: rgb2spec_opt.cpp  soac.cpp  spectra_gpu.cpp
spectra/pathtracer/core/: bsdf.cuh  bsdf.h  bssrdf.cu  bssrdf.cuh  bssrdf.h  bxdfs.cu  bxdfs.cuh  bxdfs.h  cameras.cu  cameras.cuh  cameras.h  compiler.h  diagnostics.cuh  diagnostics.h  film.cu  film.cuh  film.h  filters.cu  filters.cuh  filters.h  interaction.cu  interaction.cuh  interaction.h  kernel_config.cu  kernel_config.cuh  lights.cu  lights.cuh  lights.h  lightsamplers.cu  lightsamplers.cuh  lightsamplers.h  materials.cu  materials.cuh  materials.h  media.cpp  media.cu  media.cuh  media.h  media_host.cu  options.cu  (+18 more)
spectra/pathtracer/gpu/: memory.cu  memory.cuh  memory.h  util.cu  util.cuh  util.h
spectra/pathtracer/memory/: memory.cu  memory.cuh
spectra/pathtracer/optix/: aggregate.cu  aggregate.cuh  aggregate.h  optix.cu  optix.cuh  optix.h
spectra/pathtracer/util/: args.cpp  args.h  buffercache.cpp  buffercache.cu  buffercache.cuh  buffercache.h  check.cu  check.cuh  check.h  color.cu  color.cuh  color.h  colorspace.cu  colorspace.cuh  colorspace.h  containers.cuh  containers.h  error.cu  error.h  file.cpp  file.cu  file.cuh  file.h  float.cuh  float.h  hash.cuh  hash.h  image.cpp  image.cu  image.cuh  image.h  loopsubdiv.cpp  loopsubdiv.cu  loopsubdiv.cuh  loopsubdiv.h  lowdiscrepancy.cu  lowdiscrepancy.cuh  lowdiscrepancy.h  math.cu  math.cuh  (+58 more)
spectra/util/: math.cpp  math.ixx
(+110 files in other folders)
